crates/atlas-runtime/tests/snapshots/operator_precedence_tests__precedence_div_over_sub.snap
---
source: crates/atlas-runtime/tests/operator_precedence_tests.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Sub
        left:
          Literal:
            - Number: 10
            - start: 0
              end: 2
        right:
          Binary:
            op: Div
            left:
              Literal:
                - Number: 6
                - start: 5
                  end: 6
            right:
              Literal:
                - Number: 2
                - start: 9
                  end: 10
            span:
              start: 5
              end: 10
        span:
          start: 0
          end: 10
    span:
      start: 0
      end: 11
