crates/atlas-runtime/tests/snapshots/operator_precedence_tests__precedence_div_over_sub_complex.snap
---
source: crates/atlas-runtime/tests/operator_precedence_tests.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: Sub
        left:
          Binary:
            op: Sub
            left:
              Literal:
                - Number: 20
                - start: 0
                  end: 2
            right:
              Binary:
                op: Div
                left:
                  Literal:
                    - Number: 10
                    - start: 5
                      end: 7
                right:
                  Literal:
                    - Number: 2
                    - start: 10
                      end: 11
                span:
                  start: 5
                  end: 11
            span:
              start: 0
              end: 11
        right:
          Literal:
            - Number: 3
            - start: 14
              end: 15
        span:
          start: 0
          end: 15
    span:
      start: 0
      end: 16
