crates/atlas-runtime/tests/snapshots/operator_precedence_tests__precedence_func_call_in_comparison.snap
---
source: crates/atlas-runtime/tests/operator_precedence_tests.rs
expression: "program.items[0]"
---
Statement:
  Expr:
    expr:
      Binary:
        op: And
        left:
          Binary:
            op: Lt
            left:
              Call:
                callee:
                  Identifier:
                    name: bar
                    span:
                      start: 0
                      end: 3
                args: []
                span:
                  start: 0
                  end: 5
            right:
              Literal:
                - Number: 5
                - start: 8
                  end: 9
            span:
              start: 0
              end: 9
        right:
          Binary:
            op: Gt
            left:
              Call:
                callee:
                  Identifier:
                    name: baz
                    span:
                      start: 13
                      end: 16
                args: []
                span:
                  start: 13
                  end: 18
            right:
              Literal:
                - Number: 0
                - start: 21
                  end: 22
            span:
              start: 13
              end: 22
        span:
          start: 0
          end: 22
    span:
      start: 0
      end: 23
